# zagitova

./: Cargo.toml  README.md
src/: config.rs  lib.rs  main.rs  types.rs
src/agent/: agent_loop.rs  context.rs  injection_defense.rs  mod.rs  system_prompt.rs  tools.rs
src/conway/: client.rs  credits.rs  inference.rs  mod.rs  x402.rs
src/git/: mod.rs  state_versioning.rs  tools.rs
src/heartbeat/: config.rs  daemon.rs  mod.rs  tasks.rs
src/identity/: mod.rs  provision.rs  wallet.rs
src/registry/: agent_card.rs  discovery.rs  erc8004.rs  mod.rs
src/replication/: genesis.rs  lineage.rs  mod.rs  spawn.rs
src/self_mod/: audit_log.rs  code.rs  mod.rs  tools_manager.rs  upstream.rs
src/setup/: banner.rs  defaults.rs  environment.rs  mod.rs  prompts.rs  wizard.rs
src/skills/: format.rs  loader.rs  mod.rs  registry.rs
src/social/: client.rs  mod.rs
src/state/: adapter.rs  database.rs  mod.rs  schema.rs
src/survival/: funding.rs  low_compute.rs  mod.rs  monitor.rs
