[package]
name = "automaton"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
reqwest = { version = "0.12", features = ["json"] }
clap = { version = "4", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
regex = "1"
alloy = { version = "1", features = ["full"] }
alloy-primitives = "1"
sha3 = "0.10"
rand = "0.8"
yaml-rust2 = "0.9"
colored = "2"
dialoguer = "0.11"
cron = "0.13"
base64 = "0.22"
hex = "0.4"
dirs = "5"
thiserror = "2"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
async-trait = "0.1"
urlencoding = "2"
